# PROD-2025-Individual

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  entry.sh  pyproject.toml
backend/alg/: adv_alg.py  campaigns.json
backend/src/: config.py  enums.py  main.py
backend/src/core/: application.py  aws.py  redis.py
backend/src/models/: __init__.py  advertiser.py  campaign.py  client.py  client_adv_actions.py
backend/src/repo/: advertiser.py  campaign.py  client.py
backend/src/routers/: __init__.py  ads.py  advertisers.py  campaign.py  clients.py  files.py  stats.py  system.py
backend/src/schemes/: __init__.py  advertiser.py  campaign.py  client.py  files.py  security.py  shared.py  stat.py  time.py
backend/src/service/: files.py  gpt.py
backend/tests/: conftest.py
backend/tests/e2e/: test_01_clients.py  test_02_advertisers.py  test_03_files.py  test_04_time.py  test_05_campaigns.py  test_06_ads.py  test_07_statistic.py
backend/tests/unit/: test_u01_clients.py  test_u02_advertisers.py  test_u03_campaigns.py  test_u04_moderation.py
bot/: Dockerfile  config.py  main.py  pyproject.toml  shared.py  states.py
bot/api/: __init__.py  ad.py  advertiser.py  campaign.py  client.py  core.py  files.py  stats.py  time.py
bot/api/models/: __init__.py  ad.py  advertiser.py  (+3 more)
bot/exc/: api.py
bot/handlers/: __init__.py  ad.py  advertiser.py  campaign.py  other.py  start.py  stats.py
bot/menus/: __init__.py  ad.py  advertiser.py  campaign.py  start.py  stats.py
bot/utils/: image.py  nums.py  search_keyboard.py
(+27 files in other folders)
