[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Zoom-Developer <sa-mp12345@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.12"
aiogram = "^3.17.0"
python-dotenv = "^1.0.1"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
